--- a/index.html
+++ b/index.html
@@ -129,27 +129,27 @@
                     </div>
                     <div class="rec-movie">
                         <div class="tag">1</div>
-                        <img src="asset/vertical/parallel.jpg" alt="">
+                        <img src="asset/vertical/imposible.png" alt="">
                         <p>Parallel</p>
                     </div>
                     <div class="rec-movie">
                         <div class="tag">2</div>
-                        <img src="asset/vertical/parallel.jpg" alt="">
+                        <img src="asset/vertical/mc.png" alt="">
                         <p>Parallel</p>
                     </div>
                     <div class="rec-movie">
                         <div class="tag">3</div>
-                        <img src="asset/vertical/parallel.jpg" alt="">
+                        <img src="asset/vertical/snowwhite.png" alt="">
                         <p>Parallel</p>
                     </div>
                     <div class="rec-movie">
                         <div class="tag">4</div>
-                        <img src="asset/vertical/parallel.jpg" alt="">
+                        <img src="asset/vertical/dogman.png" alt="">
                         <p>Parallel</p>
                     </div>
                     <div class="rec-movie">
                         <div class="tag">5</div>
-                        <img src="asset/vertical/parallel.jpg" alt="">
+                        <img src="asset/vertical/vertical.png" alt="">
                         <p>Parallel</p>
                     </div>
                 </div>
