--- a/index.html
+++ b/index.html
@@ -395,28 +395,40 @@
                 </div>
             </div>
             <div id="movie" class="tabcontent">
-                <!-- Movie content goes here -->
-                Movie Content
+                <div class="center">
+                    <div id="movie-item" class="all-tab">
+                    </div>
+                </div>
             </div>
             <div id="sf" class="tabcontent">
-                <!-- SF+ content goes here -->
-                SF+ Content
+                <div class="center">
+                    <div id="sf-item" class="all-tab">
+                    </div>
+                </div>
             </div>
             <div id="food" class="tabcontent">
-                <!-- Food & Beverage content goes here -->
-                Food & Beverage Content
+                <div class="center">
+                    <div id="food-item" class="all-tab">
+                    </div>
+                </div>
             </div>
             <div id="bank" class="tabcontent">
-                <!-- Bank content goes here -->
-                Bank Content
+                <div class="center">
+                    <div id="bank-item" class="all-tab">
+                    </div>
+                </div>
             </div>
             <div id="branch" class="tabcontent">
-                <!-- Branch content goes here -->
-                Branch Content
+                <div class="center">
+                    <div id="branch-item" class="all-tab">
+                    </div>
+                </div>
             </div>
             <div id="other" class="tabcontent">
-                <!-- Other content goes here -->
-                Other Content
+                <div class="center">
+                    <div id="other-item" class="all-tab">
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -504,38 +516,34 @@
             </ul>
         </div>
         <div id="allc" class="content">
-            <div id="ally" class="ally">
-
-
-            </div>
+            <div id="ally" class="ally"></div>
         </div>
         <div id="acc" class="content">
-            <!-- Bank content goes here -->
-            acc Content
+            <div id="accc" class="ally"></div>
         </div>
         <div id="moviee" class="content">
-            <!-- Branch content goes here -->
-            movie Content
+            <div id="movieee" class="ally"></div>
         </div>
         <div id="csr" class="content">
-            <!-- Other content goes here -->
-            csr Content
+            <div id="csrr" class="ally"></div>
         </div>
     </div>
 
     <!-- Film Festival Page (Placeholder) -->
     <div id="festival-page" class="page-content">
+        <div class="heading">ขอโทษด้วยครับ ส่วนนี้ยังไม่ได้ถูกพัฒนา แต่จะมีในเร็วๆนี้</div>
 
     </div>
 
     <!-- SF+ Page (Placeholder) -->
     <div id="sfplus-page" class="page-content">
+        <div class="heading">ขอโทษด้วยครับ ส่วนนี้ยังไม่ได้ถูกพัฒนา แต่จะมีในเร็วๆนี้</div>
 
     </div>
 
     <!-- Privacy Policy Page (Placeholder) -->
     <div id="privacy-page" class="page-content">
-
+        <div class="heading">ขอโทษด้วยครับ ส่วนนี้ยังไม่ได้ถูกพัฒนา แต่จะมีในเร็วๆนี้</div>
     </div>
 
     <div id="profile-page" class="page-content">
